--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build": "cross-env ENV=prod webpack --config ./build/webpack.prod.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3",
     "vue-scrolly": "^0.9.3",
